fixed-scrollbars

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,9 @@ nav {
     max-height: 300px;
     overflow: scroll;
 }
+.card-content::-webkit-scrollbar {
+    display: none;
+}
 .card .card-content p {
     padding-bottom: 5% !important;
     font-size: 1.0em !important;
